# EB-Digital

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  README.md  alembic.ini  commitlint.config.cjs  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  security.yml
apps/frontend-betreuer/: eslint.config.js  package.json  vite.config.ts
apps/frontend-betreuer/src/lib/: version.ts
apps/frontend-disponent/: .prettierignore  .prettierrc.json  eslint.config.js  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend-disponent/src/: app.d.ts
apps/frontend-disponent/tests/: api-auth.test.ts  api-client.test.ts  api-tenants.test.ts  session.test.ts
apps/frontend-einsatzkraft/: eslint.config.js  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
apps/frontend-einsatzkraft/src/: app.html
apps/frontend-einsatzkraft/static/: .gitkeep
apps/frontend-einsatzkraft/tests/: access-code.test.ts  api-anonymous.test.ts  api-catalog.test.ts  api-client.test.ts  api-operations.test.ts  cart.test.ts  location.test.ts  order-display.test.ts  realtime-ws.test.ts  session.test.ts  version.test.ts
backend/eb_digital/: __init__.py  __main__.py  app.py  logging.py  settings.py
backend/eb_digital/auth/: __init__.py  api.py  cli.py  hashing.py  models.py  rate_limit.py  repositories.py  reset_token.py  sessions.py
backend/eb_digital/auth_anonymous/: __init__.py  access_code.py  api.py  models.py  repositories.py  sessions.py  tokens.py
backend/eb_digital/cache/: __init__.py
backend/eb_digital/catalog/: __init__.py  api.py  models.py  repositories.py  schemas.py  use_cases.py
backend/eb_digital/db/: __init__.py  models.py
backend/eb_digital/fleet/: __init__.py  api.py  models.py  repositories.py  schemas.py  use_cases.py
backend/eb_digital/geo/: __init__.py  plausibility.py
backend/eb_digital/jobs/: __init__.py  ping.py
backend/eb_digital/operations/: __init__.py  api.py  audit.py  exceptions.py  models.py  realtime_adapter.py  repository.py  schemas.py  use_cases.py
backend/eb_digital/realtime/: __init__.py  api.py  connection.py  hub.py  messages.py  publisher.py  redaction.py  topics.py
backend/eb_digital/tenants/: __init__.py  api.py  models.py  participation.py  repositories.py  slug.py  use_cases.py  username.py
backend/migrations/: env.py
backend/migrations/versions/: 20260509_0bf0aa5ccee1_baseline.py  20260509_1e343dae5fc4_add_procrastinate_schema.py  20260509_660e1a12a41a_add_health_marker.py  20260509_fa3aaa5f04a0_add_platform_admin.py  20260510_c1465f544fd0_add_tenant_dispatcher_carer_operation_.py  20260510_f14e7ecace66_add_anonymous_session_and_widen_.py  20260512_a7c3b2d8e9f1_add_participation_lookup_indices.py  20260528_04b8afcf67a7_add_fleet_tables.py  20260528_b3a9c7e1f205_add_catalog_tables.py  20260528_c5e8d2f4a173_add_operations_4_3a_tables.py  20260607_d4f1a9b8c2e6_add_order_bundle_4_3b.py
backend/tests/: conftest.py  test_auth_anonymous_access_code.py  test_auth_anonymous_api.py  test_auth_anonymous_models.py  test_auth_anonymous_repositories.py  test_auth_anonymous_sessions.py  test_auth_anonymous_tokens.py  test_auth_cli.py  test_auth_hashing.py  test_auth_login_api.py  test_auth_login_tenant_status.py  test_auth_models.py  test_auth_rate_limit.py  test_auth_register_tenant.py  test_auth_repositories.py  test_auth_reset_password.py  test_auth_reset_token.py  test_auth_sessions.py  test_cache.py  test_catalog_api.py  test_catalog_repositories.py  test_catalog_use_cases.py  test_db.py  test_fleet_api.py  test_fleet_repositories.py  test_fleet_use_cases.py  test_geo_plausibility.py  test_health.py  test_jobs.py  test_logging.py  test_main.py  test_migration_splitter.py  test_models.py  test_operations_api.py  test_operations_audit.py  test_operations_bundling.py  test_operations_models.py  test_operations_repository.py  test_operations_schemas.py  test_operations_use_cases.py  (+15 more)
docker/: Dockerfile.backend
docs/: architecture.md  blockers.md  decisions.md  fahrplan.md  logbuch.md  project-context.md  vision.md
docs/methodik-feedback/: issue-onboarding-luecke.md  regelwerks-patches.md  wip-branch-sichtbarkeit.md
docs/proposals/: 2026-05-17-cache-verzicht-und-spike-g.md
docs/spikes/: spike-g-results.md  spike-h-results.md  spike-i-results.md  spike-k-results.md  spike-l-results.md  spike-m-fragenkatalog.md
infra/reverse-proxy/: Caddyfile
infra/tile-proxy/: nginx.conf
scripts/: dev-smoke.sh  fix-venv-flags.sh
templates/: README.md
templates/github-workflows/: ci-minimal.yml  ci-python.yml  ci-typescript.yml
templates/pre-commit/: python.yaml  typescript.yaml
(+31 files in other folders)
